--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development --open --progress",
     "build": "webpack --mode=production  --progress",
-    "prepare": "husky",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
