--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
