--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "install": "^0.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
