#3_[set] - tanstack query 설치

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^5.62.15",
     "install": "^0.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
