--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "ts-loader": "^9.5.1",
