--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
