--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t $DOCKER_IMAGE:latest .
-          docker push $DOCKER_IMAGE:latest
+          docker build -t twilight9758@gmail/golaping-app:latest .
+          docker push twilight9758@gmail:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
