--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ env.AWS_HOST }}
-          username: ${{ env.AWS_USERNAME }}
-          key: ${{ env.AWS_KEY }}
+          host: ${{ env.EC2_HOST }}
+          username: ${{ env.EC2_USERNAME }}
+          key: ${{ env.EC2_KEY }}
           script: |
             docker pull $DOCKER_IMAGE:latest
             docker stop golaping-app || true
