fix: DOCKER_IMAGE 확인인

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
 
+      - name: Check Docker Image Name
+        run: echo DOCKER_IMAGE=> $DOCKER_IMAGE
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
