--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,10 +51,11 @@ jobs:
           username: ${{ env.EC2_USERNAME }}
           key: ${{ env.EC2_KEY }}
           script: |
+            echo "Deploying with image: ${DOCKER_IMAGE}:latest"
             docker stop golaping-app || true
             docker rm golaping-app || true
-            docker pull $DOCKER_IMAGE:latest
-            docker run -d --name golaping-app -p 80:80 $DOCKER_IMAGE:latest
+            docker pull "${DOCKER_IMAGE}:latest"
+            docker run -d --name golaping-app -p 80:80 "${DOCKER_IMAGE}:latest"
             docker container prune -f
             docker image prune -af
             docker ps -a
