--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,8 @@ jobs:
             echo "Deploying with image: ${DOCKER_IMAGE}:latest"
             docker stop golaping-app || true
             docker rm golaping-app || true
-            docker pull ${{ secrets.DOCKER_USERNAME }}:latest
-            docker run -d --name golaping-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
+            docker run -d --name golaping-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
             docker container prune -f
             docker image prune -af
             docker ps -a
