--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.14",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.14",
@@ -27,7 +30,6 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@svgr/webpack": "^8.1.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
