--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
     "install": "^0.13.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.14",
     "uuid": "^11.0.4"
   },
@@ -33,6 +35,7 @@
     "@types/matter-js": "^0.19.8",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "babel-loader": "^9.2.1",
@@ -50,6 +53,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
+    "stompjs": "link:@types/@stomp/stompjs",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
