--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
             docker stop golaping-app || true
             docker rm golaping-app || true
             docker pull ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
-             # Docker 컨테이너 실행 시 환경변수 API_URL 전달
+             # Docker 컨테이너 실행 시 환경변수 API_URL 전달하도록
             docker run -d --name golaping-app -p 80:80 -p 443:443 -e API_URL=${{ secrets.API_URL }} ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
             docker container prune -f
             docker image prune -af
