[fix] - EC2에서 환경변수 컨테이너로

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,13 @@ jobs:
             docker stop golaping-app || true
             docker rm golaping-app || true
             docker pull ${{ secrets.DOCKER_USERNAME }}/golaping-app:latest
+
+            # Copy .env file to EC2
+            scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USERNAME }}/.env
+
+            # Copy .env file to Docker container
+            ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "docker cp /home/${{ secrets.EC2_USERNAME }}/.env golaping-app:/app/.env"
+
             # 컨테이너 실행
             docker run -d --name golaping-app -p 80:80 -p 443:443 \
             -v /etc/letsencrypt:/etc/letsencrypt \
