--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build Project
         run: |
-          # 전달된 환경변수를 Webpack 빌드에서 사용할 수 있도록 .env 파일로 설정
+          # 전달된 환경변수를 Webpack 빌드에서 사용할 수 있도록 .env 파일로 설정정
           echo "API_URL=${{ secrets.API_URL }}" > .env
           pnpm build
 
