[fix] yaml 문법 오류 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,8 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Prepare .env
-        run: echo "API_URL=${{ secrets.API_URL }}" > .env
+        run: |
+          echo "API_URL=${{ secrets.API_URL }}" > .env
           echo "📄 .env file contents:"
           cat .env
 
