dockerfile에서 복사 말고 ec2에서 복사하도록 test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
-      # - name: Prepare .env
-      #   run: |
-      #     echo "API_URL=${{ secrets.API_URL }}" > .env
-      #     echo "📄 .env file contents:"
-      #     cat .env
+      - name: Prepare .env
+        run: |
+          echo "API_URL=${{ secrets.API_URL }}" > .env
+          echo "📄 .env file contents:"
+          cat .env
 
       - name: Build Project
         run: pnpm build
