--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,10 @@ jobs:
           cat .env
 
       - name: Build Project
-        run: pnpm build
+        run: |
+          # 전달된 환경변수를 Webpack 빌드에서 사용할 수 있도록 .env 파일로 설정
+          echo "API_URL=${{ secrets.API_URL }}" > .env
+          pnpm build
 
       - name: Log in to DockerHub
         uses: docker/login-action@v3
