--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
-    "worker-loader": "^3.0.8"
+    "worker-loader": "2.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
