--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@stomp/stompjs": "7.0.0",
     "@svgr/webpack": "^8.1.0",
     "@types/matter-js": "^0.19.8",
     "@types/react": "^19.0.2",
@@ -52,12 +53,12 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
-    "stompjs": "link:@types/@stomp/stompjs",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    "worker-loader": "2.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
