--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       EC2_HOST: ${{ secrets.EC2_HOST }}
       EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
       EC2_KEY: ${{ secrets.EC2_KEY }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       API_URL: ${{ secrets.API_URL }}
 
     steps:
